[package]
name = "subenum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.5.3"
clap = { version = "4.0.18", features = ["derive"] }
